# Qlattice

./: .clang-format  .gitignore  AGENTS.md  LICENSE  Makefile  Makefile.example  README  README.md  VERSION  build.sh  conf.sh  lint.py  plan.md  qlat-setup.h  release.py  setenv.sh  shell-fhs.nix  shell.nix
examples-cpp-grid/grid-with-qlat/: main.cpp  meson.build  run.sh
examples-cpp-grid/grid-with-qlat/depend-grid/: meson.build
examples-cpp/benchmark/: log  main.cpp  meson.build  run.sh
examples-cpp/field-rng-tests/: log  main.cpp  meson.build
examples-cpp/propagators/: log  main.cpp  meson.build  run.sh
examples-cpp/rng-state-tests/depend-qlat/: meson.build
examples-cpp/selected-field/: log  main.cpp  meson.build  run.sh
examples-py/cqlat-ext/: meson.build
examples-py/cqlat-ext/include/: meson.build
examples-py/qlat-ext/: meson.build  run.py
examples-py/qlat-ext/depend-qlat/: meson.build
examples-py/qlat-ext/pylib/: meson.build
examples-py/qlat-ext/qlat_ext/: __init__.py  all.pxd  c.py  cp.pxd  cp.pyx  everything.pxd  hello.pxd  hello.pyx  meson.build
qlat/: .mesonpy-native-file.ini  Makefile.inc  cache.h  compressed-eigen-io.h  config.h  contract-field.h  contract-hvp.h  contract-pion.h  contract-wall-src-prop.h  coordinate-d.h  coordinate.h  cps-lanc.h  cps-pio.h  cps-utils.h  cps.h  crc32.h  dslash.h  fermion-action.h  field-comm.h  field-dist-io.h  field-expand.h  field-fft.h  field-io.h  field-rng.h  field-serial-io.h  field-shuffle.h  field-utils.h  field.h  fields-io.h  gauge-action.h  geometry.h  grid.h  hmc-stats.h  hmc.h  latio.h  lqps.h  matrix-hmc.h  matrix.h  meson.build  meson_options.txt  (+29 more)
qlat-cps/: README.md  meson.build  pyproject.toml
qlat-cps/depend-cps/: meson.build
qlat-cps/depend-qlat/: meson.build
qlat-cps/include/: meson.build
qlat-cps/include/qlat-cps/: meson.build  qlat-cps.h
qlat-cps/lib/: init.cpp  meson.build  prop.cpp
qlat-cps/pylib/: meson.build
qlat-cps/pylib/qlat_cps/: __init__.py  c.py  cp.pyx  everything.pxd  get_include_dir.py  meson.build  prop.py
qlat-cps/qlat_cps/: __init__.py  __main__.py  c.py  cp.pxd  cp.pyx  get_include_dir.py  init.py  meson.build  prop.py
qlat-cps/qlat_cps/lib/: init.cpp  meson.build  prop.cpp
qlat-cps/qlat_cps/scripts/: meson.build  qlat_cps_config.py
qlat-cps/qlat_cps_config/: __main__.py  get_info.py  meson.build
qlat-grid/: meson.build  pyproject.toml
qlat-grid-io/: meson.build  meson_options.txt
qlat-grid-io/include/: meson.build
qlat-grid-io/pylib/: meson.build
qlat-grid/depend-qlat/: meson.build
qlat-grid/include/: meson.build
qlat-grid/lib/: init.cpp  meson.build  prop.cpp
qlat-grid/pylib/: meson.build
qlat-grid/pylib/qlat_grid/: c.py  (+10 more)
qlat-grid/qlat_grid/: __init__.pxd  __init__.py  __main__.py  c.py  cp.pyx  get_include_dir.py  init.py  meson.build  prop.py
qlat-grid/qlat_grid_config/: __main__.py  get_info.py  meson.build
qlat-utils/: .mesonpy-native-file.ini  LICENSE  README.md  meson.build  pyproject.toml
qlat-utils/include/: meson.build
qlat-utils/lib/: lat-io.cpp  mat.cpp  meson.build  qar.cpp  rng-state.cpp  utils-io.cpp  version.cpp  version_gen.sh
qlat-utils/pylib/: meson.build
qlat-utils/qlat_utils/: __init__.pxd  __init__.py  __main__.py  all.pxd  ama.py  c.py  cache.py  complex.pxd  coordinate.pxd  coordinate.pyx  coordinate_d.inc.pyx  cp.pxd  cp.pyx  cpa.pxd  cpa.pyx  cutils.pyx  data.py  elem_type.inc.pyx  everything.pxd  get_include_dir.py  json.py  lat_data.pxd  lat_data.pxd.in  lat_data.pyx  lat_data.pyx.in  load_prop.py  lru_cache.py  mat.pxd  mat.pyx  meson.build  parallel.py  q_fit_corr.py  q_fit_corr_2.py  q_hlt_reconstruction.py  qar.pxd  qar.pyx  qar_utils.py  qplot.py  rng_state.inc.pyx  rng_state.pxd  (+12 more)
qlat-utils/qlat_utils_config/: __main__.py  get_info.py  meson.build
qlat/auto_contractor/: README.md  TODO.md  __init__.py  auto_fac_funcs.py  benchmark.py  compile.py  distillation_mat_op.py  eval.py  expr_arithmetic.py  meson.build  operators.py  runtime.py  runtime_distillation.py  simulation.py  wick.py
qlat/cqlat/: contraction-field.cpp  contraction-hvp.cpp  contraction-pion.cpp  exports.h  fermion-action.cpp  field-double.cpp  field-io.cpp  field-selection.cpp  field-utils.cpp  field.cpp  fields-io.cpp  fthmc.cpp  gauge-action.cpp  hmc-stats.cpp  hmc.cpp  init.cpp  inverter.cpp  lat-io.cpp  lib.cpp  lib.h  mat.cpp  meson.build  propagator.cpp  qcd.cpp  qm-action.cpp  scalar-action.cpp  selected-field.cpp  selected-points.cpp  smear.cpp  topology.cpp  update.sh  utils-io.cpp  vector_utils.cpp  wilson-flow.cpp
qlat/depend-qlat-utils/: meson.build
qlat/lib/: core.cpp  env.cpp  field-shuffle.cpp  field.cpp  fields-io.cpp  mat.cpp  meson.build  mpi.cpp  selected-field.cpp  selected-points.cpp  selection.cpp  utils-io.cpp
qlat/pylib/: meson.build  qlat_gpt.py  rbc_ukqcd.py
qlat/qlat/: __init__.pxd  __init__.py  __main__.py  all.pxd  c.py.in  contract_field.py  contract_hvp.py  contract_pion.py  coordinate.py  cp.pxd.in  cp.pyx.in  cp_gen.sh  cp_template.pxd  cp_template.pyx  cp_type_gen.sh  cp_type_template.pyx  elem_type_template.py  everything.pxd  fermion_action.py  field.py  field_analysis.py  field_base.pxd  field_base.pyx  field_double.py  field_selection.pxd  field_selection.py  field_selection.pyx  field_selection_utils.py  field_type_dict.py  field_types.pxd.in  field_types.pyx.in  field_utils.pxd  field_utils.py  field_utils.pyx  fields_io.pxd  fields_io.py  fields_io.pyx  flow_scale.py  fthmc.py  gauge_action.pxd  (+47 more)
qlat/qlat_config/: __main__.py  get_info.py  meson.build
qlat/vector_utils/: check_fun.h  fft_desc.h  float_type.h  gammas.h  general_funs.h  io_vec.h  quda_para.h  reduce_V.h  reduce_V_dev.h  utils_FFT_GPU.h  utils_Matrix_prod.h  utils_Vec_redistribute.h  utils_construction.h  utils_copy_data.h  utils_eigensys.h  utils_gaugefield.h  utils_grid_src.h  utils_lms_funs.h  utils_low_rho.h  utils_quda_inverter.h  utils_read_txt.h  utils_reduce_vec.h  utils_shift_vecs.h  utils_smear_src.h  utils_smear_src_each.h  utils_smear_vecs.h  utils_stagger_contractions.h  utils_vector_GPU.h
(+2213 files in other folders)
