[build-system]
requires = [ 'meson-python', 'ninja==1.10.2.4', ]
build-backend = 'mesonpy'

[project]
name = 'qlat-utils'
dynamic = [ 'version', ]
description = 'Qlattice utilities'
readme = 'README.md'
license = { text = 'GPL-3.0-or-later' }
keyword = [ 'qar', 'Timer', 'RngState', ]
authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
