[build-system]
build-backend = 'mesonpy'
requires = [ 'meson-python', 'wheel', 'meson>=0.64', 'cython', 'numpy' ]

[project]
name = 'qlat-utils'
dynamic = [ 'version', ]
description = 'Qlattice utilities'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = 'GPL-3.0-or-later' }
keyword = [ 'qar', 'Timer', 'RngState', ]
authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
dependencies = [ 'numpy', 'psutil', 'cython', ]

[tool.meson-python.args]
setup = [ '-Doptimization=2', '-Ddebug=false', '-Dbuildtype=custom', '-Db_ndebug=false', ]
compile = [ '-j4', ]
# pip install qlat-utils -Ccompile-args="-j2"
