[build-system]
build-backend = 'mesonpy'
requires = [ 'meson-python', 'wheel', 'meson>=0.64', 'cython', 'qlat-utils', ]

[project]
name = 'qlat'
dynamic = [ 'version', ]
description = 'Qlattice'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = 'GPL-3.0-or-later' }
keyword = [ 'Lattice', 'QCD', 'SelectedField', 'SelectedPoints', ]
authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
dependencies = [ 'qlat-utils', 'sympy', ]

[tool.cibuildwheel]
build = "cp*-manylinux_x86_64"
skip = ""
test-skip = ""

archs = [ "auto", ]
build-frontend = "pip"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = ""

before-all = "yum install -y openmpi-devel fftw-devel eigen3-devel"
before-build = ""
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = []
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
