[build-system]
build-backend = 'mesonpy'
requires = [ 'meson-python', 'wheel', 'meson>=0.64', 'cython', 'qlat-utils', ]

[project]
name = 'qlat'
dynamic = [ 'version', ]
description = 'Qlattice'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = 'GPL-3.0-or-later' }
keyword = [ 'Lattice', 'QCD', 'SelectedField', 'SelectedPoints', ]
authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
dependencies = [ 'qlat-utils', 'sympy', ]

[tool.cibuildwheel]
build = [ "cp*-manylinux_x86_64", "cp311-manylinux_aarch64", "cp*-macosx_*", ]
skip = ""
test-skip = ""

build-frontend = "pip"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = ""

before-build = ""
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = []
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = [ "x86_64", "aarch64", ]
before-all = "yum install -y eigen3-devel openmpi-devel fftw-devel"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = "x86_64"
before-all = "brew install zlib llvm eigen open-mpi fftw"
environment = { PATH="/usr/local/opt/llvm/bin:/usr/local/opt/findutils/libexec/gnubin:$PATH", LD_RUN_PATH="/usr/local/opt/llvm/lib/c++", LIBRARY_PATH="/usr/local/opt/llvm/lib/c++:/usr/local/opt/llvm/lib", CPATH="/usr/local/opt/llvm/include", CXX="clang++" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
