[build-system]
build-backend = 'mesonpy'
requires = [ 'meson-python', 'wheel', 'meson>=0.64', 'cython', 'qlat-utils', ]

[project]
name = 'qlat'
dynamic = [ 'version', ]
description = 'Qlattice'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = 'GPL-3.0-or-later' }
keyword = [ 'Lattice', 'QCD', 'SelectedField', 'SelectedPoints', ]
authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
dependencies = [ 'qlat-utils', 'sympy', 'mpi4py', ]

[tool.meson-python.args]
setup = [ '-Doptimization=2', '-Ddebug=false', '-Dbuildtype=custom', '-Db_ndebug=false', ]
compile = [ '-j4', ]
# pip install qlat -Ccompile-args="-j2"
